# perlin

./: .gitignore  README.md  perlin.py  pyproject.toml  render.py  requirements.txt
perlin/: __init__.py  _core.py  _hash.py  _render.py  _types.py
perlin/app/: render.py
src/: _types.py  hash.py  perlin.py  render.py
